feat: Add external font

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -23,6 +23,10 @@ body {
   color: var(--gray-700);
 }
 
+body, input, button {
+  font: 400 1rem "Roboto", sans-serif;
+}
+
 button {
   cursor: pointer;
 }
