--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -21,6 +21,7 @@
 body {
   background: var(--white);
   color: var(--gray-700);
+  -webkit-font-smoothing: antialiased;
 }
 
 body, input, button {
