--- a/src/components/Input/styles.module.scss
+++ b/src/components/Input/styles.module.scss
@@ -11,5 +11,6 @@
     border: 1px solid var(--gray-100);
     border-radius: 4px;
     filter: drop-shadow(0px 8px 4px var(--shadow-color));
+    max-width: 10rem;
   }
 }
