--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -23,6 +23,7 @@ body {
   background: var(--white);
   color: var(--gray-700);
   -webkit-font-smoothing: antialiased;
+  background: var(--white) url("/background.png") no-repeat fixed bottom right;
 }
 
 body, input, button {
@@ -47,5 +48,9 @@ a {
 @media (max-width: 720px) {
   html {
     font-size: 87.5%;
+  }
+
+  body {
+    background-size: 50%;
   }
 }
