--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -20,10 +20,10 @@
 
 body {
   padding: 4rem;
-  background: var(--white);
   color: var(--gray-700);
   -webkit-font-smoothing: antialiased;
   background: var(--white) url("/background.png") no-repeat fixed bottom right;
+  background-size: 95% 100vh;
 }
 
 body, input, button {
@@ -37,6 +37,14 @@ button {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+.graphImage {
+  position: absolute;
+  top: 18%;
+  right: 18%;
+  width: 18rem;
+  height: 18rem;
 }
 
 @media (max-width: 1080px) {
