--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -24,3 +24,22 @@
     font-size: 0.9rem;
   }
 }
+
+@media (max-width: 550px) {
+  .headerContainer {
+    img {
+      width: 8rem;
+      height: 4rem;
+    }
+  }
+
+  .headerContent {
+    time {
+      font-size: 1rem;
+    }
+
+    p {
+      font-size: 0.8rem;
+    }
+  }
+}
