--- a/src/components/Input/styles.module.scss
+++ b/src/components/Input/styles.module.scss
@@ -1,4 +1,6 @@
 .inputContainer {
+  flex: 1;
+
   label {
     display: block;
     margin-bottom: 0.5rem;
@@ -11,6 +13,5 @@
     border: 1px solid var(--gray-100);
     border-radius: 4px;
     filter: drop-shadow(0px 8px 4px var(--shadow-color));
-    max-width: 10rem;
   }
 }
