--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -49,12 +49,22 @@ a {
   }
 }
 
-@media (max-width: 720px) {
+@media (max-width: 850px) {
   html {
     font-size: 87.5%;
   }
 
   body {
     background-size: auto 50%;
+  }
+}
+
+@media (max-width: 550px) {
+  html {
+    font-size: 87.5%;
+  }
+
+  body {
+    background-image: none;
   }
 }
